spade-tests/src/snapshots/spade_tests__ast_lowering__named_struct_patterns_errors_if_missing_bindings.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct A {x: bool}

fn test(a: A) -> bool {
    let A$() = a;
    true
}


error: Missing argument: x
  ┌─ testinput:4:10
  │
4 │     let A$() = a;
  │          ^^^ Missing argument: x


